Row spacing, new column sizes, checkbox style fix.

--- a/core/src/components/k-column/k-column.scss
+++ b/core/src/components/k-column/k-column.scss
@@ -24,10 +24,15 @@
   }
 }
 
+:host(.KColumn--fluid) {
+  padding: unset;
+}
+
 :host(.KColumn--col-1),
 :host(.KColumn--col-sm-1),
 :host(.KColumn--col-md-1),
-:host(.KColumn--col-lg-1) {
+:host(.KColumn--col-lg-1),
+:host(.KColumn--col-xl-1) {
   width: calc(100% / 4);
   max-width: calc(100% / 4);
 
@@ -44,7 +49,8 @@
 :host(.KColumn--col-2),
 :host(.KColumn--col-sm-2),
 :host(.KColumn--col-md-2),
-:host(.KColumn--col-lg-2) {
+:host(.KColumn--col-lg-2),
+:host(.KColumn--col-xl-2) {
   width: calc(100% / 4 * 2);
   max-width: calc(100% / 4 * 2);
 
@@ -61,7 +67,8 @@
 :host(.KColumn--col-3),
 :host(.KColumn--col-sm-3),
 :host(.KColumn--col-md-3),
-:host(.KColumn--col-lg-3) {
+:host(.KColumn--col-lg-3),
+:host(.KColumn--col-xl-3) {
   width: calc(100% / 4 * 3);
   max-width: calc(100% / 4 * 3);
 
@@ -78,7 +85,8 @@
 :host(.KColumn--col-4),
 :host(.KColumn--col-sm-4),
 :host(.KColumn--col-md-4),
-:host(.KColumn--col-lg-4) {
+:host(.KColumn--col-lg-4),
+:host(.KColumn--col-xl-4) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -93,8 +101,10 @@
   }
 }
 :host(.KColumn--col-5),
+:host(.KColumn--col-sm-5),
 :host(.KColumn--col-md-5),
-:host(.KColumn--col-lg-5) {
+:host(.KColumn--col-lg-5),
+:host(.KColumn--col-xl-5) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -109,8 +119,10 @@
   }
 }
 :host(.KColumn--col-6),
+:host(.KColumn--col-sm-6),
 :host(.KColumn--col-md-6),
-:host(.KColumn--col-lg-6) {
+:host(.KColumn--col-lg-6),
+:host(.KColumn--col-xl-6) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -125,8 +137,10 @@
   }
 }
 :host(.KColumn--col-7),
+:host(.KColumn--col-sm-7),
 :host(.KColumn--col-md-7),
-:host(.KColumn--col-lg-7) {
+:host(.KColumn--col-lg-7),
+:host(.KColumn--col-xl-7) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -141,8 +155,10 @@
   }
 }
 :host(.KColumn--col-8),
+:host(.KColumn--col-sm-8),
 :host(.KColumn--col-md-8),
-:host(.KColumn--col-lg-8) {
+:host(.KColumn--col-lg-8),
+:host(.KColumn--col-xl-8) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -157,7 +173,10 @@
   }
 }
 :host(.KColumn--col-9),
-:host(.KColumn--col-lg-9) {
+:host(.KColumn--col-sm-9),
+:host(.KColumn--col-md-9),
+:host(.KColumn--col-lg-9),
+:host(.KColumn--col-xl-9) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -172,7 +191,10 @@
   }
 }
 :host(.KColumn--col-10),
-:host(.KColumn--col-lg-10) {
+:host(.KColumn--col-sm-10),
+:host(.KColumn--col-md-10),
+:host(.KColumn--col-lg-10),
+:host(.KColumn--col-xl-10) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -187,7 +209,10 @@
   }
 }
 :host(.KColumn--col-11),
-:host(.KColumn--col-lg-11) {
+:host(.KColumn--col-sm-11),
+:host(.KColumn--col-md-11),
+:host(.KColumn--col-lg-11),
+:host(.KColumn--col-xl-11) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
@@ -202,7 +227,10 @@
   }
 }
 :host(.KColumn--col-12),
-:host(.KColumn--col-lg-12) {
+:host(.KColumn--col-sm-12),
+:host(.KColumn--col-md-12),
+:host(.KColumn--col-lg-12),
+:host(.KColumn--col-xl-12) {
   width: calc(100% / 4 * 4);
   max-width: calc(100% / 4 * 4);
 
